--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "url": "https://github.com/neuronetpl/eventor/issues"
   },
   "homepage": "https://github.com/neuronetpl/eventor#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0"
+  }
 }
