--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-es2015": "^6.18.0",
     "benchmark": "^2.1.3",
     "eventemitter2": "^2.2.1",
+    "jscheck": "^0.2.0",
     "microtime": "^2.1.2",
     "webpack": "^1.14.0"
   }
