--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack && uglifyjs --compress --output eventor.min.js eventor.browser.js"
+    "build": "webpack && uglifyjs --compress --output eventor.min.js eventor.browser.js",
+    "optimizations": "node --trace_opt --trace_deopt --allow-natives-syntax bench/optimizations.js"
   },
   "repository": {
     "type": "git",
@@ -50,6 +51,8 @@
     "babel-preset-es2015": "^6.18.0",
     "benchmark": "^2.1.3",
     "eventemitter2": "^2.2.1",
+    "jasmine": "^2.5.3",
+    "jasmine-promises": "^0.4.1",
     "jscheck": "^0.2.0",
     "microtime": "^2.1.2",
     "webpack": "^1.14.0"
