--- a/package.json
+++ b/package.json
@@ -42,19 +42,20 @@
     "url": "https://github.com/neuronetio/eventorjs/issues"
   },
   "homepage": "https://github.com/neuronetio/eventorjs#readme",
-  "dependencies": {
-    "bluebird": "^3.4.7"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "benchmark": "^2.1.3",
+    "bluebird": "^3.4.7",
+    "cuid": "^1.3.8",
     "eventemitter2": "^2.2.1",
     "jasmine": "^2.5.3",
     "jasmine-promises": "^0.4.1",
     "jscheck": "^0.2.0",
     "microtime": "^2.1.2",
+    "promiseloop": "^1.1.6",
     "webpack": "^1.14.0"
   }
 }
