--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
-    "build": "babel index.js --out-file eventor.browser.js --presets es2015  && uglifyjs --compress --output eventor.min.js eventor.browser.js",
+    "build": "webpack && uglifyjs --compress --output eventor.min.js eventor.browser.js",
     "optimizations": "node --trace_opt --trace_deopt --allow-natives-syntax bench/optimizations.js"
   },
   "repository": {
