--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "eventorjs",
   "version": "0.16.18",
   "description": "async event emitter on steroids",
-  "main": "eventor.es2015.js",
+  "main": "index.js",
+  "browser": "eventor.es2015.js",
   "scripts": {
     "test": "jasmine",
     "build": "babel index.js -o eventor.es2015.js && webpack && uglifyjs --compress --output eventor.min.js eventor.browser.js",
